// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForceUpdatePasswordScreen snapshot test should render correct ui and completeNewPassword fails 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View />
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "marginTop": 13.5,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "white",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Create new password
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginHorizontal": 75,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginVertical": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "marginTop": -5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="New password"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="next"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="new-pasword-input"
                  underlineColorAndroid="transparent"
                  value="somePassword12!"
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="show-password-icon"
                  >
                    <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="10.786" viewBox="0 0 16 10.786"><path d="M10.25,7.383a8.6,8.6,0,0,0-8,5.393,8.63,8.63,0,0,0,16,0A8.6,8.6,0,0,0,10.25,7.383Zm0,8.989a3.6,3.6,0,1,1,3.636-3.6A3.626,3.626,0,0,1,10.25,16.372Zm0-5.754a2.157,2.157,0,1,0,2.182,2.157A2.177,2.177,0,0,0,10.25,10.619Z" transform="translate(-2.25 -7.383)"/></svg>
                      fill="#000"
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginVertical": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "marginTop": -5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Repeat new password"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={true}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="validate-pasword-input"
                  underlineColorAndroid="transparent"
                  value="somePassword12!"
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="show-validate-password-icon"
                  >
                    <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="13.711" viewBox="0 0 16 13.711"><defs><style>.a{fill:#ddd;}</style></defs><path class="a" d="M10.252,7.385a3.627,3.627,0,0,1,3.638,3.61,3.472,3.472,0,0,1-.261,1.321l2.125,2.107a8.536,8.536,0,0,0,2.5-3.428,8.617,8.617,0,0,0-10.9-4.91L8.92,7.646A3.6,3.6,0,0,1,10.252,7.385ZM2.978,5.418l1.66,1.646.336.332a8.5,8.5,0,0,0-2.724,3.6A8.629,8.629,0,0,0,13.437,15.8l.307.3,2.132,2.107.925-.918L3.9,4.5ZM7,9.406l1.128,1.118a2.045,2.045,0,0,0-.057.468,2.171,2.171,0,0,0,2.182,2.164,2.052,2.052,0,0,0,.471-.057l1.128,1.118a3.619,3.619,0,0,1-5.238-3.228A3.567,3.567,0,0,1,7,9.406Zm3.135-.561,2.292,2.274.014-.114a2.171,2.171,0,0,0-2.182-2.164Z" transform="translate(-2.25 -4.5)"/></svg>
                      fill="#fff"
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginVertical": 45,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="submit-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30.5,
                          "paddingBottom": 1,
                          "paddingTop": 2,
                          "textAlign": "center",
                        }
                      }
                    >
                      Create
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 0.2,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "width": 75,
                    }
                  }
                >
                  <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
                    height={18}
                    options={
                      Object {
                        "alignSelf": "center",
                      }
                    }
                    width={18}
                  />
                </View>
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "alignSelf": "center",
                          "color": "#09B3A5",
                          "width": 525,
                        },
                      ]
                    }
                  >
                    At least 8 characters)
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "width": 75,
                    }
                  }
                >
                  <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
                    height={18}
                    options={
                      Object {
                        "alignSelf": "center",
                      }
                    }
                    width={18}
                  />
                </View>
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "alignSelf": "center",
                          "color": "#09B3A5",
                          "width": 525,
                        },
                      ]
                    }
                  >
                    Contains a capital letter
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "width": 75,
                    }
                  }
                >
                  <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
                    height={18}
                    options={
                      Object {
                        "alignSelf": "center",
                      }
                    }
                    width={18}
                  />
                </View>
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "alignSelf": "center",
                          "color": "#09B3A5",
                          "width": 525,
                        },
                      ]
                    }
                  >
                    Contains a symbol (!, @, #, $, %, ^, &, *)
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#78849E",
                        "fontSize": 22.5,
                      },
                    ]
                  }
                >
                  By registering you accept our 
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="privacy-policy-button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                          "textDecorationLine": "underline",
                        },
                      ]
                    }
                  >
                    Privacy Policy
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#78849E",
                        "fontSize": 22.5,
                      },
                    ]
                  }
                >
                   and 
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="terms-and-condition-button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                          "textDecorationLine": "underline",
                        },
                      ]
                    }
                  >
                    Terms & Conditions
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ForceUpdatePasswordScreen snapshot test should render correct ui for ForceUpdatePasswordScreen 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "paddingTop": 33.5,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "flex-end",
                    "justifyContent": "space-between",
                    "padding": 22.5,
                  }
                }
                testID="exit-button"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    style={
                      Array [
                        Object {
                          "color": "#242424",
                          "fontSize": 30,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Ionicons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="iconIcon"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View />
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "marginTop": 13.5,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2A2E43",
                    "fontFamily": "Roboto-Regular",
                  },
                  Object {
                    "color": "white",
                    "fontSize": 53.5,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Create new password
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "marginHorizontal": 75,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginVertical": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "marginTop": -5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  placeholder="New password"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="next"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="new-pasword-input"
                  underlineColorAndroid="transparent"
                  value="somePassword12!"
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="show-password-icon"
                  >
                    <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="10.786" viewBox="0 0 16 10.786"><path d="M10.25,7.383a8.6,8.6,0,0,0-8,5.393,8.63,8.63,0,0,0,16,0A8.6,8.6,0,0,0,10.25,7.383Zm0,8.989a3.6,3.6,0,1,1,3.636-3.6A3.626,3.626,0,0,1,10.25,16.372Zm0-5.754a2.157,2.157,0,1,0,2.182,2.157A2.177,2.177,0,0,0,10.25,10.619Z" transform="translate(-2.25 -7.383)"/></svg>
                      fill="#000"
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderRadius": 30,
                  "height": 86.5,
                  "marginVertical": 22.5,
                  "paddingHorizontal": 10,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderBottomWidth": 0,
                    "borderColor": "#86939e",
                    "flexDirection": "row",
                    "marginTop": -5,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "zIndex": 1,
                  }
                }
              >
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  blurOnSubmit={false}
                  editable={true}
                  keyboardAppearance="light"
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  onFocus={[Function]}
                  placeholder="Repeat new password"
                  placeholderTextColor="#8FAABF"
                  rejectResponderTermination={true}
                  returnKeyType="default"
                  secureTextEntry={false}
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#FFF",
                      "flex": 1,
                      "flexDirection": undefined,
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 29.5,
                      "marginLeft": 22.5,
                      "minHeight": 40,
                      "width": 600,
                    }
                  }
                  testID="validate-pasword-input"
                  underlineColorAndroid="transparent"
                  value="somePassword12!"
                />
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "height": 40,
                      "justifyContent": "center",
                      "marginVertical": 4,
                      "paddingRight": 4,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="show-validate-password-icon"
                  >
                    <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="10.786" viewBox="0 0 16 10.786"><path d="M10.25,7.383a8.6,8.6,0,0,0-8,5.393,8.63,8.63,0,0,0,16,0A8.6,8.6,0,0,0,10.25,7.383Zm0,8.989a3.6,3.6,0,1,1,3.636-3.6A3.626,3.626,0,0,1,10.25,16.372Zm0-5.754a2.157,2.157,0,1,0,2.182,2.157A2.177,2.177,0,0,0,10.25,10.619Z" transform="translate(-2.25 -7.383)"/></svg>
                      fill="#000"
                      height={20}
                      width={20}
                    />
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#ff190c",
                    "fontSize": 12,
                    "margin": 5,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "marginVertical": 45,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 25,
                    "overflow": "hidden",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "busy": false,
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="submit-button"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": undefined,
                        "borderColor": "#2089dc",
                        "borderRadius": 25,
                        "borderWidth": 0,
                        "flexDirection": "row",
                        "height": 100,
                        "justifyContent": "center",
                        "marginBottom": 26.5,
                        "padding": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 30.5,
                          "paddingBottom": 1,
                          "paddingTop": 2,
                          "textAlign": "center",
                        }
                      }
                    >
                      Create
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flex": 0.2,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "width": 75,
                    }
                  }
                >
                  <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
                    height={18}
                    options={
                      Object {
                        "alignSelf": "center",
                      }
                    }
                    width={18}
                  />
                </View>
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "alignSelf": "center",
                          "color": "#09B3A5",
                          "width": 525,
                        },
                      ]
                    }
                  >
                    At least 8 characters)
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "width": 75,
                    }
                  }
                >
                  <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
                    height={18}
                    options={
                      Object {
                        "alignSelf": "center",
                      }
                    }
                    width={18}
                  />
                </View>
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "alignSelf": "center",
                          "color": "#09B3A5",
                          "width": 525,
                        },
                      ]
                    }
                  >
                    Contains a capital letter
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "width": 75,
                    }
                  }
                >
                  <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
                    height={18}
                    options={
                      Object {
                        "alignSelf": "center",
                      }
                    }
                    width={18}
                  />
                </View>
                <View>
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "alignSelf": "center",
                          "color": "#09B3A5",
                          "width": 525,
                        },
                      ]
                    }
                  >
                    Contains a symbol (!, @, #, $, %, ^, &, *)
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#78849E",
                        "fontSize": 22.5,
                      },
                    ]
                  }
                >
                  By registering you accept our 
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="privacy-policy-button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                          "textDecorationLine": "underline",
                        },
                      ]
                    }
                  >
                    Privacy Policy
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2A2E43",
                        "fontFamily": "Roboto-Regular",
                      },
                      Object {
                        "color": "#78849E",
                        "fontSize": 22.5,
                      },
                    ]
                  }
                >
                   and 
                </Text>
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="terms-and-condition-button"
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        Object {
                          "color": "#78849E",
                          "fontSize": 22.5,
                          "textDecorationLine": "underline",
                        },
                      ]
                    }
                  >
                    Terms & Conditions
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;
